kubernetes/apps/networking/pihole/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: networking
subsets:
- addresses:
  - ip: 192.168.0.114
  ports:
  - name: pihole
    port: 80
    protocol: TCP
