kubernetes/apps/networking/pihole/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  annotations:
    auth.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:pi-hole"
    hajimari.io/group: "Network"
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
  hostnames:
    - "pihole.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: pihole
          port: 80
